<resources>
    <string name="app_name">PokeCardDemo</string>
    <string name="sets_text">Sets</string>
    <string name="favorites_text">Favorites</string>
    <string name="deck_text">Deck</string>
    <string name="pokemons_text">Pokemons</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pokemon_detail_text">Pokemon Detail</string>
    <string name="sync">Sync</string>
    <string name="bobby">Bobby</string>
    <string name="card_detail">Card Detail</string>
    <string name="card_removed_text">removed from favorites.</string>
    <string name="retrofit_error">Something is wrong. I can feel it.</string>
    <string name="added_to_favorites">added to favorites.</string>
    <string name="no_wifi_text">No Wifi Connection</string>
    <string name="counter">Counter</string>
    <string name="a_random_feature_lmao">A random feature lmao</string>
    <string name="zero_num" translatable="false">0</string>
    <string name="start_text">Start</string>
    <string name="stop_text">Stop</string>
    <string name="reset_text">Reset</string>
    <string name="syncing">Syncing...</string>
    <string name="wifi_list">Wifi List</string>
    <string name="random_feature_2_wifi_name_list">Random feature 2. Wifi Name List.</string>
    <string name="see_wifi_list">See WiFi List</string>
    <string name="article_text">In a vault deep inside Abbey Road Studios in London — protected by an unmarked,
        triple-locked, police-alarmed door — are something like 400 hours of unreleased Beatles recordings, starting
        from June 2, 1962 and ending with the very last tracks recorded for the <i>Let It Be</i> album. The best of the
        best were released by Apple Records in the form of the 3-volume Anthology series.
        For more information, see the Beatles Time Capsule at www.rockument.com.
        \n\n
        This volume starts with the first new Beatle song, “Free as a Bird” (based on a John Lennon demo, found only on <i>
            The Lost Lennon Tapes Vol. 28</i>, and covers the very earliest historical recordings, outtakes from the
        first albums, and live recordings from early concerts and BBC Radio sessions.
        \n\n
        <b>Highlights include:</b>
        \n\n
        <b>
            <i>Cry for a Shadow</i>
        </b>
        - Many a Beatle fanatic started down the outtake road, like I did, with a first listen to this song. Originally
        titled “Beatle Bop” and recorded in a single session that yielded four songs (the other three featured Tony
        Sheridan with the Beatles as a backing band), “Cry for a Shadow” is an instrumental written by Lennon and
        Harrison, which makes it unique to this day. John Lennon plays rhythm guitar, George Harrison plays lead guitar,
        Paul McCartney plays bass, and Pete Best plays drums. The sessions were produced by Bert Kaempfert in Hamburg,
        Germany, during the Beatles’ second visit from April through July of 1961 to play in the Reeperbahn-section
        clubs.
        \n\n
        <b>
            <i>My Bonnie</i>
        </b>
        and
        <b>
            <i>Ain’t She Sweet</i>
        </b>
        — At the same session, the Beatles played on “My Bonnie” (the first-ever single with Beatles playing), as the
        backing band for English singer Tony Sheridan, originally a member of the Jets. The popularity of this single in
        Liverpool brought the Beatles to the attention of Brian Epstein, who worked in the NEMS record store and tried
        to meet demand for the disc. John Lennon then sings a fine “Ain’t She Sweet” (his first-ever released vocal).
        \n\n
        <b>
            <i>Searchin</i>
        </b>
        — A Jerry Leiber - Mike Stoller comedy song that was a hit for the Coasters in 1957, and a popular live favorite
        of the Beatles. The Coasters also had a hit with “Besame Mucho” and the Beatles covered that song as well. Ringo
        Starr had by now replaced Pete Best on drums. The high falsetto is George, who also plays a hesitant lead
        guitar. This is from their first audition for Decca Records in London on Jan 1., 1962, live in the studio. The
        Grateful Dead would later cover “Searchin” with a similar arrangement, Pigpen doing the Paul vocals. A live
        version is available on outtake records featuring the Dead joined by the Beach Boys!
        \n\n
        <b>
            <i>Love Me Do</i>
        </b>
        — An early version of the song, played a bit slower and with more of a blues feeling, and a cool bossa-nova beat
        in middle. Paul had to sing while John played harmonica — a first for the group. Pete Best played drums on this
        version.
        \n\n
        <b>
            <i>She Loves You – Till There Was You – Twist and Shout</i>
        </b>
        — Live at the Princess Wales Theatre by Leicester Square in London, attended by the Queen. “Till There Was You”
        (by Meredith Wilson) is from the musical The Music Man and a hit for Peggy Lee in 1961. Before playing it, Paul
        said it was recorded by his favorite American group, “Sophie Tucker” (which got some laughs). At the end, John
        tells the people in the cheaper seats to clap their hands, and the rest to “rattle your jewelry” and then
        announces “Twist and Shout” (a song by Bert Russell and Phil Medley that was first recorded in 1962 by the Isley
        Brothers). A film of the performance shows the Queen smiling at John’s remark.
        \n\n
        <b>
            <i>Leave My Kitten Alone</i>
        </b>
        — One of the lost Beatle songs recorded during the “Beatles For Sale” sessions but never released. This song,
        written by Little Willie John, Titus Turner, and James McDougal, was a 1959 R&amp;B hit for Little Willie John
        and covered by Johnny Preston before the Beatles tried it and shelved it. A reference to a “big fat bulldog” may
        have influenced John’s “Hey Bulldog” (Yellow Submarine album), which is a similar rocker.
        \n\n
        <b>
            <i>One After 909</i>
        </b>
        — A song recorded for the <i>Let It Be</i> album was actually worked on way back in the beginning, six years
        earlier. This take shows how they did it much more slowly, with an R&amp;B feel to it.
    </string>
    <string name="wifi_scan_complete">Wifi Scan Complete</string>
    <string name="sync_done">DB Syncing Done</string>
</resources>
