<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragment.CounterFragment">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a_random_feature_lmao"
            android:layout_marginEnd="133dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="132dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="64dp" android:id="@+id/textView2"
            android:textSize="24sp"/>
    <TextView
            android:text="@string/zero_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/counter_text"
            android:textSize="128sp" android:textStyle="bold"
            android:textAlignment="center" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="168dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="169dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginTop="64dp"/>
    <Button
            android:text="@string/start_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/startBUtton"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@+id/counter_text" android:layout_marginTop="64dp"/>
    <Button
            android:text="@string/stop_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/stopButton"
            app:layout_constraintTop_toBottomOf="@+id/counter_text"
            android:layout_marginTop="64dp" android:layout_marginEnd="30dp"
            app:layout_constraintEnd_toStartOf="@+id/resetButton"
            app:layout_constraintStart_toEndOf="@+id/startBUtton" android:layout_marginStart="30dp"/>
    <Button
            android:text="@string/reset_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/resetButton"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintTop_toBottomOf="@+id/counter_text" android:layout_marginTop="64dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>