<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_sets">

    <fragment
            android:id="@+id/navigation_sets"
            android:name="id.ac.ui.cs.mobileprogramming.farras.pokecarddemo.fragment.PokemonSetFragment"
            android:label="@string/sets_text"
            tools:layout="@layout/pokemon_set_fragment">

        <action android:id="@+id/action_navigation_sets_to_navigation_cards" app:destination="@id/navigation_cards"/>
        <action android:id="@+id/action_navigation_sets_to_navigation_favorites"
                app:destination="@id/navigation_favorites"/>
        <action android:id="@+id/action_navigation_sets_to_navigation_counter"
                app:destination="@id/navigation_counter"/>
    </fragment>
    <fragment
            android:id="@+id/navigation_cards"
            android:name="id.ac.ui.cs.mobileprogramming.farras.pokecarddemo.fragment.PokemonCardFragment"
            android:label="@string/pokemons_text"
            tools:layout="@layout/pokemon_card_fragment">

        <action android:id="@+id/action_navigation_cards_to_navigation_sets" app:destination="@id/navigation_sets"/>
        <action android:id="@+id/action_navigation_cards_to_navigation_detail" app:destination="@id/navigation_detail"/>
    </fragment>
    <fragment
            android:id="@+id/navigation_favorites"
            android:name="id.ac.ui.cs.mobileprogramming.farras.pokecarddemo.fragment.FavoriteCardFragment"
            android:label="@string/favorites_text"
            tools:layout="@layout/fragment_favorite_card">
        <action android:id="@+id/action_navigation_favorites_to_navigation_sets" app:destination="@id/navigation_sets"/>
        <action android:id="@+id/action_navigation_favorites_to_navigation_counter"
                app:destination="@id/navigation_counter"/>
    </fragment>

    <fragment
            android:id="@+id/navigation_detail"
            android:name="id.ac.ui.cs.mobileprogramming.farras.pokecarddemo.fragment.PokemonDetailFragment"
            android:label="@string/pokemon_detail_text"
            tools:layout="@layout/fragment_pokemon_detail">
        <action android:id="@+id/action_navigation_detail_to_navigation_cards" app:destination="@id/navigation_cards"/>
    </fragment>

    <fragment
            android:id="@+id/navigation_counter"
            android:name="id.ac.ui.cs.mobileprogramming.farras.pokecarddemo.fragment.CounterFragment"
            android:label="@string/counter"
            tools:layout="@layout/fragment_counter">
        <action android:id="@+id/action_navigation_counter_to_navigation_sets" app:destination="@id/navigation_sets"/>
        <action android:id="@+id/action_navigation_counter_to_navigation_favorites"
                app:destination="@id/navigation_favorites"/>
    </fragment>
</navigation>